--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_margin="10dp"
-            android:background="@drawable/filter_icon"/>
+            android:background="@drawable/filter_icon"
+            android:contentDescription="@string/content_desc_filter" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -85,8 +86,7 @@
         android:layout_marginBottom="26dp"
         android:src="@drawable/ic_baseline_add_24"
         app:backgroundTint="#ED0707"
-        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
-
+        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
+        android:contentDescription="@string/content_desc_createNewNote" />
 
 </RelativeLayout>
