--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -17,7 +17,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.276"
-        app:srcCompat="@mipmap/splash_screen" />
+        app:srcCompat="@mipmap/splash_screen"
+        android:contentDescription="@string/content_desc_applicationLogo" />
 
     <TextView
         android:id="@+id/textView2"
