--- a/app/src/main/res/layout/activity_update_note.xml
+++ b/app/src/main/res/layout/activity_update_note.xml
@@ -15,13 +15,15 @@
         android:layout_marginTop="28dp"
         android:background="@drawable/edit_text_background"
         android:fontFamily="@font/product_sans_regular"
-        android:hint="@string/title_insert_notes"
+        android:hint="@string/hint_title"
         android:textColorHint="@color/grey"
         android:textColor="@color/black"
         android:padding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no"
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/updateNotesSubtitle"
@@ -31,12 +33,14 @@
         android:textColorHint="@color/grey"
         android:background="@drawable/edit_text_background"
         android:fontFamily="@font/product_sans_regular"
-        android:hint="@string/subtitle"
+        android:hint="@string/hint_subTitle"
         android:textColor="@color/black"
         android:padding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/updateNotesTitle"/>
+        app:layout_constraintTop_toBottomOf="@+id/updateNotesTitle"
+        android:importantForAutofill="no"
+        android:inputType="text" />
 
     <LinearLayout
         android:layout_width="359dp"
@@ -62,21 +66,24 @@
             android:layout_height="25dp"
             android:layout_margin="10dp"
             android:id="@+id/greenPriority"
-            android:background="@drawable/green_shape"/>
+            android:background="@drawable/green_shape"
+            android:contentDescription="@string/content_desc_green_" />
 
         <ImageView
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="10dp"
             android:id="@+id/yellowPriority"
-            android:background="@drawable/yellow_shape" />
+            android:background="@drawable/yellow_shape"
+            android:contentDescription="@string/content_desc_yellow_"/>
 
         <ImageView
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="10dp"
             android:id="@+id/redPriority"
-            android:background="@drawable/red_shape" />
+            android:background="@drawable/red_shape"
+            android:contentDescription="@string/content_desc_red_"/>
 
     </LinearLayout>
 
@@ -97,7 +104,9 @@
         app:layout_constraintHorizontal_bias="0.558"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/updateNotesSubtitle"
-        app:layout_constraintVertical_bias="0.33"/>
+        app:layout_constraintVertical_bias="0.33"
+        android:importantForAutofill="no"
+        android:inputType="text" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -113,7 +122,8 @@
         app:layout_constraintHorizontal_bias="0.951"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/updateNotes"
-        app:layout_constraintVertical_bias="0.507"/>
+        app:layout_constraintVertical_bias="0.507"
+        android:contentDescription="@string/content_desc_updateNote" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
