--- a/app/src/main/res/layout/delete_bottom_sheet.xml
+++ b/app/src/main/res/layout/delete_bottom_sheet.xml
@@ -28,7 +28,7 @@
         android:id="@+id/delete_no"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="No"
+        android:text="@string/text_no"
         android:textSize="18sp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/delete_yes"
         android:gravity="center"
-        android:text="Yes"
+        android:text="@string/text_yes"
         android:textSize="18sp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="20dp"
