--- a/app/src/main/res/layout/item_notes.xml
+++ b/app/src/main/res/layout/item_notes.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -17,7 +18,8 @@
             android:layout_margin="10dp"
             android:layout_gravity="right"
             android:id="@+id/notesPriority"
-            android:background="@drawable/green_shape"/>
+            android:background="@drawable/green_shape"
+            tools:ignore="RtlHardcoded" />
 
 
         <LinearLayout
@@ -29,7 +31,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Title"
+                android:text="@string/text_title"
                 android:padding="5dp"
                 android:id="@+id/notesTitle"
                 android:fontFamily="@font/product_sans_regular"/>
@@ -40,7 +42,7 @@
                 android:padding="5dp"
                 android:id="@+id/notesSubtitle"
                 android:fontFamily="@font/product_sans_regular"
-                android:text="SubTitle"/>
+                android:text="@string/text_subTitle"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -49,11 +51,11 @@
                 android:id="@+id/notesDate"
                 android:fontFamily="@font/product_sans_bold"
                 android:textColor="@color/black"
-                android:text="13 sept 2021"/>
+                android:text="@string/text_date"/>
 
 
         </LinearLayout>
 
-
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
