--- a/app/src/main/res/layout/activity_insert_notes.xml
+++ b/app/src/main/res/layout/activity_insert_notes.xml
@@ -109,7 +109,7 @@
         app:layout_constraintVertical_bias="0.33"
         tools:ignore="MissingConstraints"
         android:importantForAutofill="no"
-        android:inputType="text" />
+        android:inputType="textMultiLine" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/doneNotesBtn"
