--- a/app/src/main/res/layout/activity_update_note.xml
+++ b/app/src/main/res/layout/activity_update_note.xml
@@ -106,7 +106,7 @@
         app:layout_constraintTop_toBottomOf="@+id/updateNotesSubtitle"
         app:layout_constraintVertical_bias="0.33"
         android:importantForAutofill="no"
-        android:inputType="text" />
+        android:inputType="textMultiLine" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
