color Changes in app Ui and splash Screen

--- a/app/src/main/res/drawable/no_select.xml
+++ b/app/src/main/res/drawable/no_select.xml
@@ -2,7 +2,7 @@
 <shape  android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
 <!--    'No' button Shape for delete_bottom_sheet -->
-    <solid android:color="@color/grey"/>
+    <solid android:color="@color/no_button"/>
     <corners android:radius="500dp"/>
 
 </shape>
