--- a/app/src/main/res/drawable/yes_select.xml
+++ b/app/src/main/res/drawable/yes_select.xml
@@ -2,7 +2,7 @@
 <shape  android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
 <!--    'Yes' button Shape for delete_bottom_sheet -->
-    <solid android:color="@color/red"/>
+    <solid android:color="@color/yes_button"/>
     <corners android:radius="500dp"/>
 
 </shape>
