--- a/app/src/main/res/layout/activity_insert_notes.xml
+++ b/app/src/main/res/layout/activity_insert_notes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#DFD8D8"
+    android:background="@color/insert_note_background"
     android:orientation="vertical"
     tools:context=".Activity.InsertNotesActivity">
 
@@ -16,7 +16,7 @@
         android:background="@drawable/edit_text_background"
         android:fontFamily="@font/product_sans_regular"
         android:hint="@string/title"
-        android:textColorHint="@color/grey"
+        android:textColorHint="@color/title_light_insert"
         android:textColor="@color/black"
         android:inputType="text"
         android:importantForAutofill="no"
@@ -31,7 +31,7 @@
         android:layout_width="353dp"
         android:layout_height="57dp"
         android:layout_marginTop="24dp"
-        android:textColorHint="@color/grey"
+        android:textColorHint="@color/subTitle_light_insert"
         android:background="@drawable/edit_text_background"
         android:fontFamily="@font/product_sans_regular"
         android:hint="@string/subtitle"
@@ -99,7 +99,7 @@
         android:fontFamily="@font/product_sans_regular"
         android:gravity="start"
         android:hint="@string/Notes"
-        android:textColorHint="@color/grey"
+        android:textColorHint="@color/note_light_insert"
         android:padding="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,7 +118,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:src="@drawable/icon_done"
-        app:backgroundTint="#ED0707"
+        app:backgroundTint="@color/floating_button_confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.951"
