--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,14 @@
 
     <LinearLayout
         android:id="@+id/filter"
-        android:orientation="horizontal"
-        android:layout_margin="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@color/recycler_view_background"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="30dp"
@@ -23,46 +27,46 @@
             android:contentDescription="@string/content_desc_filter" />
 
         <TextView
-            android:layout_width="wrap_content"
             android:id="@+id/noFilter"
-            android:layout_height="wrap_content"
-            android:background="@drawable/filter_unselected_shape"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:fontFamily="@font/product_sans_regular"
-            android:paddingTop="7dp"
-            android:paddingBottom="7dp"
-            android:layout_margin="5dp"
-            android:layout_gravity="center_vertical"
-            android:text="@string/no_filter"/>
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="5dp"
+            android:background="@drawable/filter_unselected_shape"
+            android:fontFamily="@font/product_sans_regular"
+            android:paddingStart="10dp"
+            android:paddingTop="7dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="7dp"
+            android:text="@string/no_filter" />
+
+        <TextView
             android:id="@+id/highToLow"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:fontFamily="@font/product_sans_regular"
-            android:layout_margin="5dp"
-            android:paddingTop="7dp"
-            android:paddingBottom="7dp"
-            android:background="@drawable/filter_unselected_shape"
-            android:layout_gravity="center_vertical"
-            android:text="@string/high_to_low"/>
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="10dp"
-            android:id="@+id/lowToHigh"
-            android:fontFamily="@font/product_sans_regular"
-            android:paddingEnd="10dp"
-            android:paddingTop="7dp"
-            android:layout_margin="5dp"
-            android:paddingBottom="7dp"
-            android:background="@drawable/filter_unselected_shape"
             android:layout_gravity="center_vertical"
-            android:text="@string/low_to_high"/>
+            android:layout_margin="5dp"
+            android:background="@drawable/filter_unselected_shape"
+            android:fontFamily="@font/product_sans_regular"
+            android:paddingStart="10dp"
+            android:paddingTop="7dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="7dp"
+            android:text="@string/high_to_low" />
+
+        <TextView
+            android:id="@+id/lowToHigh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="5dp"
+            android:background="@drawable/filter_unselected_shape"
+            android:fontFamily="@font/product_sans_regular"
+            android:paddingStart="10dp"
+            android:paddingTop="7dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="7dp"
+            android:text="@string/low_to_high" />
 
 
     </LinearLayout>
@@ -71,6 +75,7 @@
         android:id="@+id/notesRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/recycler_view_background"
         android:layout_below="@id/filter" />
 
 
@@ -84,9 +89,9 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="26dp"
         android:layout_marginBottom="26dp"
+        android:contentDescription="@string/content_desc_createNewNote"
         android:src="@drawable/ic_baseline_add_24"
-        app:backgroundTint="#ED0707"
-        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
-        android:contentDescription="@string/content_desc_createNewNote" />
+        app:backgroundTint="@color/floating_button_create"
+        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
 </RelativeLayout>
