--- a/app/src/main/res/layout/delete_bottom_sheet.xml
+++ b/app/src/main/res/layout/delete_bottom_sheet.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:gravity="center"
@@ -40,19 +41,20 @@
         android:textColor="@color/black"/>
 
     <TextView
+        android:id="@+id/delete_yes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/delete_yes"
-        android:gravity="center"
-        android:text="@string/text_yes"
-        android:textSize="18sp"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="10dp"
         android:layout_margin="10dp"
-        android:padding="7dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/yes_select"
         android:fontFamily="@font/product_sans_regular"
-        android:textColor="@color/black"/>
+        android:gravity="center"
+        android:padding="7dp"
+        android:text="@string/text_yes"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        tools:ignore="TextContrastCheck,TextContrastCheck" />
 
 </LinearLayout>
